--- a/style.css
+++ b/style.css
@@ -99,11 +99,7 @@ ul {
     text-align: center;
     font-weight: 600;
     transition-duration: 0.4s;
-}
-
-button:hover {
-    background-color: #ce2727;
-    color: white;
+    cursor: pointer;
 }
 
 .imgcontainer {
@@ -157,6 +153,7 @@ button:hover {
 .ctacontainer {
     display: flex;
     justify-content: center;
+    margin-bottom: 200px;
     
 }
 
@@ -194,13 +191,23 @@ button:hover {
     font-weight: 600;
     transition-duration: 0.4s;
     margin-left: 50px;
+    cursor: pointer;
+}
+#signup:hover,
+#signupcta:hover {
+
+    background-color: #ce2727;
+    color: white;
 }
 
 .footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
-    min-height: 72px;
+    min-height: 50px;
     background-color: #1f2937;
     color:#e5e7eb;
 }
